add styles to header/navbar/subnav

--- a/src/assets/scss/blocks/nav.scss
+++ b/src/assets/scss/blocks/nav.scss
@@ -6,6 +6,10 @@
     position: relative;
 
     &:hover{
+        .nav_link{
+            background-color: $lighgreen;
+        }
+
         >.subnav{
             display: block;
         }
