--- a/src/assets/scss/blocks/subnav.scss
+++ b/src/assets/scss/blocks/subnav.scss
@@ -1,3 +1,27 @@
 .subnav{
     display: none;
+
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 160px;
+    padding: .5rem 0;
+    background-color: $lighgreen;
+    border-radius:0 0 5px 5px;
+    box-shadow: 0 6px 8px rgba($black, .2);
+}
+
+.subnav_link{
+    display: block;
+    padding: .45rem 1.2rem;
+    color: $white;
+    font-size: 1.2rem;
+    text-decoration: none;
+
+    transition: background-color .2s ease-in-out;
+
+    &:hover{
+        background-color: darken($lighgreen, 10%);
+    }
+
 }
